<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mitsuba_diff_drive</name>
  <version>1.0.0</version>
  <description>ros2 package for mitsuba controller</description>

  <maintainer email="k-kogu2@mitsuba.co.jp">Kazushige Kogure</maintainer>
  <maintainer email="yoshida-yuki@mitsuba.co.jp">Yuki Yoshida</maintainer>
  <author>MITSUBA Corporation</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>can_msgs</depend>
  <depend>mitsuba_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
