<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mitsuba_launch</name>
  <version>1.0.0</version>
  <description>mitsuba_pkg launch files</description>

  <maintainer email="k-kogu2@mitsuba.co.jp">Kazushige Kogure</maintainer>
  <author>MITSUBA Corporation</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>ros2_socketcan</depend>
  <depend>rosbridge_server</depend>
  <depend>v4l2_camera</depend>  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
