<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mitsuba_sim</name>
  <version>1.0.0</version>
  <description>mitsuba simulation</description>
  <maintainer email="iwata-tomoyuki@mitsuba.co.jp">Tomoyuki Iwata</maintainer>
  <maintainer email="ishizuka-ryota@mitsuba.co.jp">Ryota Ishizuka</maintainer>
  <maintainer email="k-kogu2@mitsuba.co.jp">Kazushige Kogure</maintainer>
  <author>MITSUBA Corporation</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
